src/test/ui/issues/10000-19999/issue-18919.rs
type FuncType<'f> = dyn Fn(&isize) -> isize + 'f;

fn ho_func(f: Option<FuncType>) {
    //~^ ERROR the size for values of type
}

enum Option<T> {
    Some(T),
    None,
}

fn main() {}
